# conda-pypi

./: .authors.yml  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: build.yml  test.yml
conda_pypi/: build.py  downloader.py  installer.py  markers.py  migrate_env.py  name_mapping.py  plugin.py  translate.py  utils.py
conda_pypi/cli/: convert.py  install.py  main.py  migrate_env.py
conda_pypi/package_extractors/: whl.py
docs/: features.md  index.md  modules.md
docs/developer/: developer-notes.md  index.md  marker-conversion.md
docs/reference/commands/: index.rst  migrate-env.rst
news/: 259-test-repodata-with-extras.txt  272-fix-conda-package-streaming-dependency.txt  273-update-local-channel-repodata-v3-conditionals.txt  279-add-marker-conversion-support.txt  287-paths-filter-with-main  307-installer-destination-refactor  310-fix-hardcoded-entrypoint-shebangs  348-migrate-env-subcommand.rst  371-conda-pypi-pip-warning-setting  382-channel-search-troubleshooting  390-editable-better-description  392-editable-install-prompt  418-infrastructure-dependabot
recipe/: meta.yaml
tests/: test_build.py  test_conda_create.py  test_conda_local_channel.py  test_conda_meta_json_filename.py  test_editable.py  test_installer_data_files.py  test_markers.py  test_plugins.py  test_repodata.py  test_translate.py  test_utils.py
tests/cli/: test_migrate_env.py
tests/conda_local_channel/: channeldata.json  generate_noarch_wheel_repodata.py  index.html  wheel_packages.txt
tests/conda_local_channel/noarch/: index.html  repodata.json
tests/pypi_local_index/: generate_index.py  index.html
tests/pypi_local_index/demo-package/: index.html
tests/pypi_local_index/header-pkg/: header_pkg-1.0.0-py3-none-any.whl  index.html
tests/pypi_local_index/man-pkg/: index.html  man_pkg-1.0.0-py3-none-any.whl
tests/pypi_local_index/script-pkg/: index.html  script_pkg-1.0.0-py3-none-any.whl
